--- a/frontend/src/scss/global.scss
+++ b/frontend/src/scss/global.scss
@@ -62,3 +62,10 @@ input {
     padding: 0.2rem;
     color: #555;
 }
+
+.delete-item {
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: $solar-red;
+}
